--- a/vuedemo/package.json
+++ b/vuedemo/package.json
@@ -10,8 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.12.0",
+    "jquery": "^3.4.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
