--- a/vuedemo/package.json
+++ b/vuedemo/package.json
@@ -14,10 +14,12 @@
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "Qs": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
